--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,14 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Acara 3-4</title>
+    <title>Halaman Kontak</title>
 </head>
 <body>
-
-    <div class="card">Ini adalah Index htmlnya</div>
+    <div class="div1">Ini adalah kontak</div>
     
 </body>
 </html>
