--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,16 @@
 </head>
 <body>
     <div class="div1">Ini adalah kontak</div>
-    
+    <div class="div2"><u>0812871263158</u></div>
+    <style>
+        .div1{
+            font-size: 100px;
+            text-align: center;
+        }
+        .div2{
+            font-size: 100px;
+            text-align: center;
+        }
+    </style>
 </body>
 </html>
