--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
 
     <div class="card">Ini adalah Index htmlnya</div>
+    <div class="about"><a href=about.htmlt>About Html</a> </div>
+    <div class="contact"><a href=contact.html>Kontak</a></div>
     
 </body>
 </html>
