Perubahan Ke empat

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="div1">Ini adalah kontak</div>
-    <div class="div2"><u>0812871263158</u></div>
+    <div class="div2"><u><b>0812871263158</b></u></div>
     <style>
         .div1{
             font-size: 100px;
