--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 
     <div class="card">Ini adalah Index htmlnya</div>
-    <div class="about"><a href=about.htmlt>About Html</a> </div>
-    <div class="contact"><a href=contact.html>Kontak</a></div>
+    <div class="about"><a href=about.htmlt><u>About Html</u></a> </div>
+    <div class="contact"><a href=contact.html><u>Kontak</u></a></div>
     
 </body>
 </html>
